# Dynax

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
dynax/: __init__.py  base.py  base_neural_model.py  envs.py  evaluation.py  models.py  training.py
dynax/architectures/: __init__.py  mlp.py  residual.py  resnet.py  transformer.py
dynax/envs/: __init__.py  cart_pole.py  double_cart_pole.py  envs.py  pendulum.py
dynax/mpc/: __init__.py  neural_task.py
dynax/utils/: __init__.py  controllers.py  data.py  evaluation_plotting.py  mpc_eval.py  normalization.py
examples/: cart_pole.py  cart_pole_residual.py  double_cart_pole.py  pendulum.py  pendulum_residual.py  train_cart_pole.py  train_pendulum.py
